[3.4] applyOps does not validate background index spec for system.indexes inserts

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 3.4.18
    • Affects Version/s: 3.4.18
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • Storage NYC 2018-10-08
    • 1
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When applyOps is provided an insert operation into the system.indexes namespace for a background index, the command does not validate the index spec before handing off the index spec to a background thread to build the index. This could lead to an error in the background thread as it tries to initialize the MultiIndexBlock object.

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Benety Goh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: