SERVER-37333 applyOps validates both background and foreground indexes for system.indexes inserts