jstests/core/apply_ops_invalid_index_spec.js
@@ -54,4 +54,54 @@
             o: {v: 1, key: {a: 1}, name: 'a_1_system_v1', ns: collNs, unknown: 1},
         }],
     }));
+
+    //
+    // Background indexes should be subject to the same level of validation as foreground indexes.
+    //
+
+    // Inserting a background index directly into system.indexes with a bad index key pattern should
+    // return an error.
+    assert.commandFailedWithCode(db.adminCommand({
+        applyOps: [{
+            op: 'i',
+            ns: systemIndexesNs,
+            o: {key: {b: 'sideways'}, name: 'b_1_bg_system_v2', ns: collNs, background: true},
+        }],
+    }),
+                                 ErrorCodes.CannotCreateIndex);
+
+    // Inserting a v:2 background index directly into system.indexes with an unknown field in the
+    // index spec should return an error.
+    assert.commandFailedWithCode(db.adminCommand({
+        applyOps: [{
+            op: 'i',
+            ns: systemIndexesNs,
+            o: {
+                v: 2,
+                key: {b: 1},
+                name: 'b_1_bg_system_v2',
+                ns: collNs,
+                background: true,
+                unknown: true,
+            },
+        }],
+    }),
+                                 ErrorCodes.InvalidIndexSpecificationOption);
+
+    // Inserting a background v:1 index directly into system.indexes with an unknown field in the
+    // index spec should work.
+    assert.commandWorked(db.adminCommand({
+        applyOps: [{
+            op: 'i',
+            ns: systemIndexesNs,
+            o: {
+                v: 1,
+                key: {b: 1},
+                name: 'b_1_bg_system_v1',
+                ns: collNs,
+                background: true,
+                unknown: true,
+            },
+        }],
+    }));
 })();
